--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "https-proxy-agent": "^5.0.1",
     "log4js": "^6.6.1",
+    "node-forge": "^1.3.1",
     "nodemon": "^2.0.19"
   }
 }
